--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,7 +12,7 @@
   </thead>
 
   <tbody>
-    <% @products.each do |product| %>
+    <% @prod.each do |product| %>
       <tr>
         <td><%= product.name %></td>
         <td><%= product.price %></td>
